...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Presentation.AccountActivity">

    <LinearLayout
        android:id="@+id/account_visitor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visitor_login_prompt"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <Button
            android:id="@+id/btn_login_account_page"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:padding="12dp"
            android:text="@string/login" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/account_logined"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

...
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="Edit profile"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/btn_account_wishlist"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="Wishlist"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/btn_account_logout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/colorCancel"
            android:text="@string/logout"
            android:textColor="@android:color/background_light" />


    </LinearLayout>

    <!--<android.support.design.widget.BottomNavigationView-->
...
