<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Presentation.HomePage"
    android:orientation="vertical">

    <Spinner xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/discover_spinner"
        android:layout_width="181dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="203dp"
        android:layout_marginRight="203dp"
        tools:tag="Suggestions" />

    <ListView
        android:id="@+id/bookList_homepage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/home_page_navigation"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="44dp">

    </ListView>

    <!--<android.support.design.widget.BottomNavigationView-->
        <!--android:id="@+id/home_page_navigation"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="50dp"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:background="?android:attr/windowBackground"-->
        <!--app:menu="@menu/navigation" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/home_library"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:text="@string/title_library"/>
        <Button
            android:id="@+id/home_discover"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:text="@string/title_discover"/>
        <Button
            android:id="@+id/home_account"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:text="@string/title_account"/>
    </LinearLayout>
</RelativeLayout>