<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_accPic"
            android:layout_width="109dp"
            android:layout_height="88dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/anonymous_account" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="89dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_accName"
                    android:layout_width="286dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Account Name" />

                <TextView
                    android:id="@+id/text_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="User's rating" />

            </LinearLayout>

            <TextView
                android:id="@+id/text_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textMultiLine" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>